<resources>
    <string name="app_name">WeatherApp</string>
    <string name="default_web_client_id">19226304340-c8h9c1rh4pr2q2h741q614p3ikjd2gk3.apps.googleusercontent.com</string>
    <string name="app_tittle">AirSense - UIT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="look_like">Looks like you don\'t have an account. Let\'s create a new account for you</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_enter_the_password">Enter the password</string>
    <string name="tv_policy_create_account">By selecting Create Account below, I agree to <b>Terms of Service</b> &amp; <b>Privacy Policy</b></string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="or">OR</string>
    <string name="Sign_in_google">Sign In with Google</string>
    <string name="Sign_up_google">Sign Up With Google</string>
    <string name="Sign_up_email">Sign Up With Email</string>
    <string name="now_you">Now you are ready to log in. By signing in you are agreeing our Term and privacy policy.</string>
    <string name="old_password">Enter the old password</string>
    <string name="new_password">Enter the new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="you_can_change_password">You can change your password now.</string>
    <string name="changepassword">CHANGE PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Chart">Chart</string>
    <string name="Account">Account</string>
    <string name="username_default">Hi,</string>
    <string name="weather_default">Sunny</string>
    <string name="temperature_default">30 °C</string>
    <string name="rain_fail_value_default">10 mm</string>
    <string name="day_of_week_default">Saturday</string>
    <string name="month_year_default">6 Nov 2023</string>
    <string name="location_title">Location</string>
    <string name="location_user_default">Thu Duc, Ho Chi Minh City</string>
    <string name="weather_title">Weather</string>
    <string name="rainfall_title">Rainfall</string>
    <string name="sunrise_title">Sunrise</string>
    <string name="sunset_title">Sunset</string>
    <string name="sunrise_time_default">05:36 am</string>
    <string name="sunset_time_default">17:36 pm</string>
    <string name="wind_speed_title">Wind Speed</string>
    <string name="wind_speed_value_default">13 km/h</string>
    <string name="humidity_title">Humidity</string>
    <string name="humidity_value_default">83 %</string>
    <string name="celsius"> °C</string>
    <string name="percent"> %</string>
    <string name="mm"> mm</string>
    <string name="km_h"> km/h</string>
    <string name="setting">Setting</string>
    <string name="name_banner">TRAN NGUYEN QUOC BAO</string>
    <string name="email_banner">21521865@gm.uit.edu.vn</string>
    <string name="information">Personal Information</string>
    <string name="full_name">Full name</string>
    <string name="edit_full_name">TRAN NGUYEN QUOC BAO</string>
    <string name="email_address">Email address</string>
    <string name="edit_email_address">21521865@gm.uit.edu.vn</string>
    <string name="user_name">Username</string>
    <string name="edit_user_name">tnqb293</string>
    <string name="pass_word">Password</string>
    <string name="edit_pass_word">*******************</string>
    <string name="language">Language</string>
    <string name="edit_language">English</string>
    <string name="logout">LOGOUT</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="reset_password"><u>Reset your password?</u></string>
    <string name="title_username_resetpassword">Please fill in your username to reset password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="reset">Reset</string>
    <string name="signup_success">Registration Successful</string>
    <string name="signup_fail">Registration Failed</string>
    <string name="signin_success">Login Successful</string>
    <string name="signin_fail">Login Failed. Incorrect username or password</string>
    <string name="id">Identification Number</string>
    <string name="full_id">21521865</string>
    <string name="createOn">Creation Date</string>

    <string name="service">Service</string>
    <string name="serviceOn">Enable</string>
</resources>