<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp">
    <View
        android:id="@+id/v_banner"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_banner_setting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/v_banner"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/setting"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        />



    <TextView
        android:id="@+id/tv_personal_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_banner"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/information"
        />

    <ImageView
        android:id="@+id/iv_email"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_information"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/ic_mail"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toRightOf="@id/iv_email"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/email_address"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_full_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintLeft_toRightOf="@id/iv_email"
        android:layout_marginLeft="10dp"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="#002761"
        android:text="@string/edit_email_address"/>
    <ImageView
        android:id="@+id/iv_username"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_information"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/ic_username"/>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toRightOf="@id/iv_username"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_full_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintLeft_toRightOf="@id/iv_username"
        android:layout_marginLeft="10dp"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="#002761"
        android:text="@string/edit_user_name"/>
    <ImageView
        android:id="@+id/iv_id"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_id"/>
    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toRightOf="@id/iv_language"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="10dp"
        android:text="@string/id"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_full_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintLeft_toRightOf="@id/iv_id"

        android:layout_marginLeft="10dp"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="#002761"
        android:text="@string/full_id"/>
    <ImageView
        android:id="@+id/iv_create"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="155dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_createon"/>
    <TextView
        android:id="@+id/tv_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toRightOf="@id/iv_language"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"
        android:text="@string/createOn"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_create_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_create"
        app:layout_constraintLeft_toRightOf="@id/iv_create"

        android:layout_marginLeft="10dp"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="#002761"
        android:text="November 28, 2023"/>
    <ImageView
        android:id="@+id/iv_service"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_service"/>
    <TextView
        android:id="@+id/tv_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toRightOf="@id/iv_language"
        android:layout_marginTop="195dp"
        android:layout_marginLeft="10dp"
        android:text="@string/service"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_status_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_service"
        app:layout_constraintLeft_toRightOf="@id/iv_service"

        android:layout_marginLeft="10dp"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="#002761"
        android:text="@string/serviceOn"/>


    <ImageView
        android:id="@+id/iv_language"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_information"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/ic_language"/>
    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toRightOf="@id/iv_language"
        android:layout_marginTop="245dp"
        android:layout_marginLeft="10dp"
        android:text="@string/language"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_language"
        app:layout_constraintLeft_toRightOf="@id/iv_language"

        android:layout_marginLeft="10dp"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="#002761"
        android:text="@string/edit_language"/>
    <ImageView
        android:id="@+id/bt_edit_language"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toRightOf="@id/iv_language"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        android:layout_marginTop="250dp"
        android:layout_marginStart="280dp"
        android:background="@drawable/ic_edit"/>
    <Button
        android:id="@+id/bt_logout"
        android:layout_width="200dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="500dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/logout"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>