<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">
    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_look_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/look_like"
        android:textColor="@color/blue_dark"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_look_like"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_input_text"
        android:hint="@string/hint_email"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:background="@drawable/bg_input_text"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:background="@drawable/bg_input_text"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />
    <EditText
        android:id="@+id/et_enter_the_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:background="@drawable/bg_input_text"
        android:hint="@string/hint_enter_the_password"
        android:inputType="textPassword"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />
    <TextView
        android:id="@+id/tv_policy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enter_the_password"
        android:text="@string/tv_policy_create_account"
        android:textColor="@color/input_text"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/bt_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_policy"
        android:layout_marginTop="24dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/create_account"
        android:textColor="@color/maybe_black"
        android:textSize="17sp"
        android:background="@drawable/bg_button_login"
        />
    <View
        android:id="@+id/v_horizontal_left"
        android:layout_width="180dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_create_account"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_horizontal_line"
        />
    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        android:text="@string/or"
        android:textColor="@color/input_text"
        android:textSize="17sp"

        />
    <View
        android:id="@+id/v_horizontal_left_1"
        android:layout_width="180dp"
        android:layout_height="1dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_create_account"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_horizontal_line"
        />
    <Button
        android:id="@+id/bt_signup_google"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        android:layout_marginTop="14dp"
        android:text="@string/Sign_up_google"
        android:background="@drawable/bg_button_signin"
        android:textSize="15sp"
        android:textColor="@color/input_text"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        />
    <Button
        android:id="@+id/bt_return"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_signup_google"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_button_login"
        android:drawableStart="@drawable/ic_back"
        android:layout_marginTop="5dp"
        android:padding="15dp"
         />
</androidx.constraintlayout.widget.ConstraintLayout>