<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_now_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/now_you"
        android:textColor="@color/blue_dark"
        />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_now_you"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_input_text"
        android:hint="@string/hint_email"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="maicuong7709@gmail.com"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:background="@drawable/bg_input_text"
        android:hint="@string/hint_password"
        android:text="09092003"
        android:inputType="textPassword"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />
    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="40dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login"
        android:textColor="@color/maybe_black"
        android:textSize="17sp"
        android:background="@drawable/bg_button_login"
        />
    <View
        android:id="@+id/v_horizontal_left"
        android:layout_width="180dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        android:layout_marginTop="34dp"
        android:background="@drawable/bg_horizontal_line"
        />
    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textColor="@color/input_text"
        android:textSize="17sp"

        />
    <View
        android:id="@+id/v_horizontal_right"
        android:layout_width="180dp"
        android:layout_height="1dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        android:layout_marginTop="34dp"
        android:background="@drawable/bg_horizontal_line"
        />
    <Button
        android:id="@+id/bt_signin_google"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        android:layout_marginTop="40dp"
        android:text="@string/Sign_in_google"
        android:background="@drawable/bg_button_signin"
        android:textSize="15sp"
        android:textColor="@color/input_text"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        />
    <Button
        android:id="@+id/bt_signup_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_signin_google"
        android:layout_marginTop="40dp"
        android:text="@string/Sign_up_email"
        android:background="@drawable/bg_button_signin"
        android:textSize="15sp"
        android:textColor="@color/input_text"
        android:drawableStart="@drawable/icon_air_monitor_small"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>