<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp">
    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="CHANGE PASSWORD"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_you_can_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_change_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/you_can_change_password"
        android:textColor="@color/blue_dark"
        />
    <EditText
        android:id="@+id/et_email_change"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_you_can_change_password"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_input_text"
        android:hint="@string/hint_email"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_change"
        android:background="@drawable/bg_input_text"
        android:inputType="textPersonName"
        android:hint="@string/old_password"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        />
    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:background="@drawable/bg_input_text"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_old_password"
        android:background="@drawable/bg_input_text"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/input_text"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />

    <Button
        android:id="@+id/bt_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
        android:layout_marginTop="24dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/changepassword"
        android:textColor="@color/maybe_black"
        android:textSize="17sp"
        android:background="@drawable/bg_button_login"
        />

    <Button
        android:id="@+id/bt_return_change"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_change_password"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button_login"
        android:drawableStart="@drawable/ic_back"
        android:padding="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>